online_judge/usermodule/static/all_submissions/403/error_4.txt
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_4.cpp: In function ‘int main()’:
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_4.cpp:45:31: error: ‘getmidmid’ was not declared in this scope
             long long int y = getmidmid);
                               ^~~~~~~~~
/media/nemish/College/GIT/Online-term-work-submission-and-assessment-labs/online_judge/usermodule/static/all_submissions/403/codefile_4.cpp:45:31: note: suggested alternative: ‘getmid’
             long long int y = getmidmid);
                               ^~~~~~~~~
                               getmid
